--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -4,8 +4,9 @@
   "description": "Wichteln Server",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon",
     "test": "tap tests/**.js",
-    "cover": "npm test -- --cov"
+    "cover": "tap tests/**.js --cov --100"
   },
   "private": true,
   "keywords": [],
@@ -23,8 +24,12 @@
   "devDependencies": {
     "deep-copy": "^1.4.2",
     "folder-hash": "^2.1.1",
+    "nodemon": "^1.18.4",
     "npx": "^10.2.0",
     "supertest": "^3.3.0",
     "tap": "^12.0.1"
+  },
+  "nyc": {
+    "exclude": ["tests/**.js"]
   }
 }
