--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "url": "https://github.com/marc136/wichteln/issues"
   },
   "homepage": "https://github.com/marc136/wichteln#readme",
-  "dependencies": {},
+  "dependencies": {
+    "howler": "^2.0.15"
+  },
   "devDependencies": {
     "create-elm-app": "2.2.x",
     "elm": "elm0.19.0",
